Tutorials is now documentation

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,11 +14,11 @@
   	</ul>
   </section>
   <section class="menu_widget">
-    <a href="#" {% if page.tutorial_selected %}class="selected"{% endif %}> Tutorials </a>
+    <a href="#" {% if page.documentation_selected %}class="selected"{% endif %}> Documentation </a>
     <ul>
-      <li><a href="/tutorials/getting_started.html">Getting Started</a></li>
-      <li><a href="/tutorials/intermediate.html">Intermediate</a></li>
-      <li><a href="/tutorials/advanced.html">Advanced</a></li>
+      <li><a href="/documentation/overview.html">Overview</a></li>
+      <li><a href="/documentation/getting_started.html">Getting Started</a></li>
+      <li><a href="/documentation/advanced.html">Advanced</a></li>
 
     </ul>
   </section>
