--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,12 +14,11 @@
   	</ul>
   </section>
   <section class="menu_widget">
-    <a href="#" {% if page.documentation_selected %}class="selected"{% endif %}> Documentation </a>
+    <a href="#" {% if page.documentation_selected %}class="selected"{% endif %}>Training</a>
     <ul>
       <li><a href="/documentation/overview.html">Overview</a></li>
       <li><a href="/documentation/getting_started.html">Getting Started</a></li>
       <li><a href="/documentation/advanced.html">Advanced</a></li>
-
     </ul>
   </section>
   <a href="/download.html">Download</a>
