--- a/stylesheets/scss/_styling.scss
+++ b/stylesheets/scss/_styling.scss
@@ -1,90 +1,35 @@
-body#styling_page {
-  // Lazy styling
-  * {
-    &[data-ur-toggler-component='button'][data-ur-id='LazyPopup'] {
-      border-radius: 5px;
-      background: $color2;
-      opacity: 0.5;
-      padding: 5px;
-      display: inline;
-      margin: 0px 5px;
-      &[data-ur-state='enabled'] {
-        opacity: 1; } }
-    &[data-ur-toggler-component='content'][data-ur-id='LazyPopup'] {
-      display: none;
-      position: absolute;
-      border-radius: 5px;
-      background-color: #aaaaaa;
-      width: 300px;
-      height: 350px;
-      left: 200px;
-      bottom: -50px;
-      text-align: center;
-      padding-top: 30px;
-      &[data-ur-state='enabled'] {
-        display: block; } } }
-  // Proper Styling
-  //.popup_button, .popup_button > span{
-  //  border-radius: 5px;
-  //  background-color: #6495ED;
-  //  opacity: 1.0;
-  //  padding: 5px;
-  //  display: inline;
-  //  margin: 0px 5px;
-  //}
-  .popup_content {
-    position: absolute;
-    border-radius: 5px;
-    background-color: #aaaaaa;
-    bottom: -600px;
-    //height: 500px;
-    //left: 200px;
-    text-align: center;
-    padding: 30px;
-    z-index: +1; }
-  .popup_button {
-    border-radius: 5px;
-    background: blue;
-    opacity: 1;
-    padding: 5px;
-    display: inline;
-    margin: 0px 5px;
-    > span {
-      border-radius: 5px;
-      background: blue;
-      opacity: 1;
-      padding: 5px;
-      display: inline;
-      margin: 0px 5px; } }
-  *[data-ur-id="ProperPopup"] {
-    background: #323232;
-    border: none; }
-  *[data-ur-id='ProperPopup'] * {
-    &[data-ur-toggler-component='button'] {
-      background: #64953d;
-      &[data-ur-state='disabled'] {
-        background: $color2;
-        opacity: 0.5; }
-      &[data-ur-state='enabled'] {
-        background: $color2;
-        opacity: 1; } }
-    &[data-ur-toggler-component='content'] {
-      &[data-ur-state='disabled'] {
-        display: none;
-        opacity: 0.5; }
-      &[data-ur-state='enabled'] {
-        display: inline-block;
-        opacity: 1; } } }
-  //[data-ur-toggler-component='content'][data-ur-state='enabled'][data-ur-id='ProperPopup'] img{
-  //  width: 200px;
-  //  height: 200px;
-  //}
+body#styling_page_example {
+  [data-ur-set="toggler"] [data-ur-toggler-component] {
+    background: transparent;
+  }
+  [data-ur-set="toggler"][data-ur-set="toggler"][data-ur-id="LazyPopup"] [data-ur-toggler-component="button"] {
+    background: gold;
+    opacity: 0.5;
+  }
+
+  [data-ur-set="toggler"][data-ur-id="LazyPopup"] [data-ur-toggler-component="button"][data-ur-state="enabled"] {
+    opacity: 1.0;
+  }
+
+  [data-ur-set="toggler"][data-ur-id="ExplicitPopup"] [data-ur-toggler-component="button"] {
+    background: gold;
+  }
+
+  [data-ur-set="toggler"][data-ur-id="ExplicitPopup"] [data-ur-toggler-component="button"][data-ur-state="disabled"] {
+    opacity: 0.5;
+  }
+
+  [data-ur-set="toggler"][data-ur-id="ExplicitPopup"] [data-ur-toggler-component="button"][data-ur-state="enabled"] {
+    opacity: 1.0;
+  }
+
 }
 
 body#grouping_page {
   [data-ur-set="toggler"] {
     background: none;
-    border: none; }
+    border: none;
+  }
   [data-ur-toggler-component="button"] {
     -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -94,9 +39,11 @@ body#grouping_page {
     margin: 5px;
     padding: 5px;
     width: 300px;
-    border: none; }
+    border: none;
+  }
   [data-ur-toggler-component="content"] {
-    display: none; }
+    display: none;
+  }
   [data-ur-toggler-component="content"][data-ur-state="enabled"] {
     webkit-border-radius: 5px;
     -moz-border-radius: 5px;
@@ -109,22 +56,37 @@ body#grouping_page {
     width: 300px;
     li {
       margin-left: 50px;
-      color: black; } }
-  img {
+      color: black;
+    }
+  }
+  img#flowchart {
     border: 3px dashed rgb(60, 60, 60);
     padding: 5px;
     display: block;
     margin-left: auto;
-    margin-right: auto; } }
+    margin-right: auto;
+  }
+  @media screen and (max-width: 479px), screen and (max-height: 479px) {
+    img#flowchart {
+      width: 100%;
+      height: auto;
+    }
+  }
+}
 
 body#who_page {
   [data-ur-set="toggler"] {
     background: none;
     border: none;
     [data-ur-toggler-component="button"] {
-      width: 250px; }
+      width: 250px;
+    }
     [data-ur-toggler-component="content"] {
       display: none;
-      width: 250px; }
+      width: 250px;
+    }
     [data-ur-toggler-component="content"][data-ur-state="enabled"] {
-      display: block; } } }
+      display: block;
+    }
+  }
+}
